bynkc/tests/fixtures/positive/183_weather_fetch_adapter/src/forecast/lookup.karn
context forecast.lookup

consumes weather { Weather }

service lookup {
  on call(city: String) -> Effect[Result[Report, WeatherError]] given Weather {
    let r <- Weather.current(city)
    r
  }
}
